--- a/test/LaTeXAndHTML/succeed/Issue2744.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2744.quick.tex
@@ -94,7 +94,7 @@ After.
 \>[2]\AgdaKeyword{postulate}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaPostulate{!\_!}%
+\>[4]\AgdaOperator{\AgdaPostulate{!\_!}}%
 \>[11]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -106,7 +106,7 @@ After.
 \end{code}
 \begin{code}%
 \>[2][@{}l@{\AgdaIndent{1}}]%
-\>[4]\AgdaPostulate{<!\_!>}%
+\>[4]\AgdaOperator{\AgdaPostulate{<!\_!>}}%
 \>[11]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
