--- a/test/LaTeXAndHTML/succeed/Issue982.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue982.quick.tex
@@ -51,7 +51,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaInductiveConstructor{\_,\_}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\_,\_}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
@@ -106,7 +106,7 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaInductiveConstructor{,}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
@@ -123,7 +123,7 @@
 \>[0]\AgdaFunction{uncurry}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaInductiveConstructor{,}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
