--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
@@ -31,7 +31,7 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{if\_then\_else\_}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if\_then\_else\_}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -45,20 +45,20 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{if}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
 \AgdaInductiveConstructor{true}%
-\>[10]\AgdaFunction{then}\AgdaSpace{}%
+\>[10]\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaFunction{else}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
-\>[0]\AgdaFunction{if}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
 \AgdaInductiveConstructor{false}%
-\>[10]\AgdaFunction{then}\AgdaSpace{}%
+\>[10]\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaFunction{else}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{f}\<%
@@ -85,7 +85,7 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\_+\_}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{\_+\_}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -94,7 +94,7 @@
 \AgdaDatatype{ℕ}\<%
 \\
 \>[0]\AgdaInductiveConstructor{zero}%
-\>[17]\AgdaFunction{+}\AgdaSpace{}%
+\>[17]\AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{n}\<%
@@ -102,12 +102,12 @@
 \>[0]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{m}\AgdaSpace{}%
 \AgdaComment{\{{-} ugh {-}\}}%
-\>[17]\AgdaFunction{+}\AgdaSpace{}%
+\>[17]\AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{m}\AgdaSpace{}%
-\AgdaFunction{+}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSymbol{)}\<%
 \\
 %
