--- a/test/LaTeXAndHTML/succeed/Tag.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.quick.tex
@@ -76,7 +76,7 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[2]\AgdaPostulate{\_∘\_}\AgdaSpace{}%
+\>[2]\AgdaOperator{\AgdaPostulate{\_∘\_}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \end{code}
