--- a/test/LaTeXAndHTML/succeed/Indenting6.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting6.tex
@@ -19,7 +19,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaInductiveConstructor{\_,\_}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\_,\_}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
