--- a/test/LaTeXAndHTML/succeed/IndentingContainer.tex
+++ b/test/LaTeXAndHTML/succeed/IndentingContainer.tex
@@ -21,7 +21,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaInductiveConstructor{\_,\_}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\_,\_}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
@@ -76,7 +76,7 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaInductiveConstructor{,}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
@@ -93,7 +93,7 @@
 \>[0]\AgdaFunction{uncurry}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaInductiveConstructor{,}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
@@ -110,7 +110,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaInductiveConstructor{\_◃\_}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\_◃\_}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
