--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.tex
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.tex
@@ -12,19 +12,19 @@
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{5}\AgdaSpace{}%
-\AgdaDatatype{\_>>\_}\AgdaSpace{}%
-\AgdaDatatype{\_<<\_}\<%
+\AgdaOperator{\AgdaDatatype{\_>>\_}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\_<<\_}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{\_>>\_}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\_>>\_}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{\_<<\_}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\_<<\_}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
@@ -48,8 +48,8 @@ In the following, we declare the fixity of two operators.
 \>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{5}\AgdaSpace{}%
-\AgdaPostulate{\_+\_}\AgdaSpace{}%
-\AgdaPostulate{\_*\_}\<%
+\AgdaOperator{\AgdaPostulate{\_+\_}}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{\_*\_}}\<%
 \end{code}
 
 A fixity declaration can preceed the actual declaration of the names.
@@ -57,8 +57,8 @@ A fixity declaration can preceed the actual declaration of the names.
 \begin{code}%
 %
 \>[2]\AgdaKeyword{postulate}\AgdaSpace{}%
-\AgdaPostulate{\_+\_}\AgdaSpace{}%
-\AgdaPostulate{\_*\_}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{\_+\_}}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{\_*\_}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \end{code}
