--- a/test/LaTeXAndHTML/succeed/Links.tex
+++ b/test/LaTeXAndHTML/succeed/Links.tex
@@ -73,7 +73,7 @@ to be specified as follows:
 
 \AgdaTarget{if, then, else, if\_then\_else\_}
 \begin{code}%
-\>[0]\AgdaFunction{if\_then\_else\_}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if\_then\_else\_}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -87,20 +87,20 @@ to be specified as follows:
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[0]\AgdaFunction{if}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
 \AgdaInductiveConstructor{true}\AgdaSpace{}%
-\AgdaFunction{then}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaFunction{else}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
-\>[0]\AgdaFunction{if}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if}}\AgdaSpace{}%
 \AgdaInductiveConstructor{false}\AgdaSpace{}%
-\AgdaFunction{then}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{then}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
-\AgdaFunction{else}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{else}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{f}\<%
