--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
@@ -153,11 +153,11 @@
 \>[32]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaNumber{6}\<%
 \\
-\>[0]\AgdaFunction{alignment}%
-\>[20]\AgdaSymbol{\AgdaUnderscore{}}%
-\>[23]\AgdaSymbol{\AgdaUnderscore{}}%
-\>[26]\AgdaSymbol{\AgdaUnderscore{}}%
-\>[29]\AgdaSymbol{\AgdaUnderscore{}}%
+\>[0]\AgdaFunction{\AgdaCatchallClause{alignment}}%
+\>[20]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
+\>[23]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
+\>[26]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
+\>[29]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
 \>[32]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaNumber{0}\<%
 \end{code}
