[ #2474 ] agda.sty + fix golden value + test
AgdaCatchallClause was not defined in agda.sty and the test suite
failed because of that. This is now ok.

The modified golden value shows a caveat to the approach I took:
it produces commands that span at most a token even when things
ought to be highlighted as a block.

In the future it may be worth investigating whether it's possible
to highlight entire blocks rather than isolated tokens. To do so
we'd need to:

* group various consecutive tokens based on their shared OtherAspects
* figure out the nesting order for these OtherAspects as they may not
  all span the same tokens (e.g. a CatchallClause would span the whole
  LHS when an unsolved constraint may appear in only one of the args)
* see whether that interacts with the alignment machinery

--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
@@ -153,11 +153,11 @@
 \>[32]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaNumber{6}\<%
 \\
-\>[0]\AgdaFunction{alignment}%
-\>[20]\AgdaSymbol{\_}%
-\>[23]\AgdaSymbol{\_}%
-\>[26]\AgdaSymbol{\_}%
-\>[29]\AgdaSymbol{\_}%
+\>[0]\AgdaFunction{\AgdaCatchallClause{alignment}}%
+\>[20]\AgdaSymbol{\AgdaCatchallClause{\_}}%
+\>[23]\AgdaSymbol{\AgdaCatchallClause{\_}}%
+\>[26]\AgdaSymbol{\AgdaCatchallClause{\_}}%
+\>[29]\AgdaSymbol{\AgdaCatchallClause{\_}}%
 \>[32]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaNumber{0}\<%
 \end{code}
