Underscores are now typeset using \AgdaUnderscore{}.

--- a/src/data/agda.sty
+++ b/src/data/agda.sty
@@ -684,4 +684,7 @@
                           \value{Agda@AlignStart}}
               \)}{\AgdaIndentSpace{}}{}}
 
+% Underscores are typeset using \AgdaUnderscore{}.
+\newcommand{\AgdaUnderscore}{\_}
+
 \endinput
