--- a/test/LaTeXAndHTML/succeed/Indenting6.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting6.quick.tex
@@ -19,7 +19,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\_,\_}}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
