--- a/test/LaTeXAndHTML/succeed/Relative-indentation.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.quick.tex
@@ -88,7 +88,7 @@
 \begin{AgdaAlign}
 text \begin{code}        %
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code} more text
     also text  \begin{code}%
@@ -119,7 +119,7 @@ text \begin{code}        %
 
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
@@ -133,7 +133,7 @@ text \begin{code}        %
 
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}%
+\AgdaModule{\AgdaUnderscore{}}%
 \>[30I]\AgdaKeyword{where}\<%
 \\
 \>[.]\<[30I]%
@@ -148,7 +148,7 @@ text \begin{code}        %
 \begin{AgdaMultiCode}
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
@@ -168,7 +168,7 @@ text \begin{code}        %
 \begin{AgdaSuppressSpace}
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
