--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.quick.tex
@@ -52,7 +52,7 @@
 \hrule
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
 \begin{code}%
