--- a/test/LaTeXAndHTML/succeed/IndentingContainer.tex
+++ b/test/LaTeXAndHTML/succeed/IndentingContainer.tex
@@ -21,7 +21,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\_,\_}}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
@@ -110,7 +110,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\_◃\_}}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}◃\AgdaUnderscore{}}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
