--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.quick.tex
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.quick.tex
@@ -12,19 +12,19 @@
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{5}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\_>>\_}}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\_<<\_}}\<%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}>>\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}<<\AgdaUnderscore{}}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\_>>\_}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}>>\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\_<<\_}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}<<\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
@@ -48,8 +48,8 @@ In the following, we declare the fixity of two operators.
 \>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{5}\AgdaSpace{}%
-\AgdaOperator{\AgdaPostulate{\_+\_}}\AgdaSpace{}%
-\AgdaOperator{\AgdaPostulate{\_*\_}}\<%
+\AgdaOperator{\AgdaPostulate{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{\AgdaUnderscore{}*\AgdaUnderscore{}}}\<%
 \end{code}
 
 A fixity declaration can preceed the actual declaration of the names.
@@ -57,8 +57,8 @@ A fixity declaration can preceed the actual declaration of the names.
 \begin{code}%
 %
 \>[2]\AgdaKeyword{postulate}\AgdaSpace{}%
-\AgdaOperator{\AgdaPostulate{\_+\_}}\AgdaSpace{}%
-\AgdaOperator{\AgdaPostulate{\_*\_}}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{\AgdaUnderscore{}*\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \end{code}
