--- a/test/LaTeXAndHTML/succeed/Issue1241.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1241.tex
@@ -10,7 +10,7 @@ This is the actual test.
 
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 %
