--- a/test/LaTeXAndHTML/succeed/Issue2536.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2536.quick.tex
@@ -7,7 +7,7 @@
 
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 \>[0]\AgdaFunction{id}\AgdaSpace{}%
