--- a/test/LaTeXAndHTML/succeed/Issue982.tex
+++ b/test/LaTeXAndHTML/succeed/Issue982.tex
@@ -51,7 +51,7 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{constructor}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\_,\_}}\<%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\<%
 \\
 %
 \>[2]\AgdaKeyword{field}\<%
