--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
@@ -31,7 +31,7 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{if\_then\_else\_}}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if\AgdaUnderscore{}then\AgdaUnderscore{}else\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -85,7 +85,7 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\_+\_}}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -154,10 +154,10 @@
 \AgdaNumber{6}\<%
 \\
 \>[0]\AgdaFunction{alignment}%
-\>[20]\AgdaSymbol{\_}%
-\>[23]\AgdaSymbol{\_}%
-\>[26]\AgdaSymbol{\_}%
-\>[29]\AgdaSymbol{\_}%
+\>[20]\AgdaSymbol{\AgdaUnderscore{}}%
+\>[23]\AgdaSymbol{\AgdaUnderscore{}}%
+\>[26]\AgdaSymbol{\AgdaUnderscore{}}%
+\>[29]\AgdaSymbol{\AgdaUnderscore{}}%
 \>[32]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaNumber{0}\<%
 \end{code}
