--- a/test/LaTeXAndHTML/succeed/Links.tex
+++ b/test/LaTeXAndHTML/succeed/Links.tex
@@ -73,7 +73,7 @@ to be specified as follows:
 
 \AgdaTarget{if, then, else, if\_then\_else\_}
 \begin{code}%
-\>[0]\AgdaOperator{\AgdaFunction{if\_then\_else\_}}\AgdaSpace{}%
+\>[0]\AgdaOperator{\AgdaFunction{if\AgdaUnderscore{}then\AgdaUnderscore{}else\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
