--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.quick.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.quick.tex
@@ -24,7 +24,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{\_}\AgdaSpace{}%
+\AgdaModule{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
 %
