--- a/test/LaTeXAndHTML/succeed/Tag.tex
+++ b/test/LaTeXAndHTML/succeed/Tag.tex
@@ -76,7 +76,7 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[2]\AgdaOperator{\AgdaPostulate{\_∘\_}}\AgdaSpace{}%
+\>[2]\AgdaOperator{\AgdaPostulate{\AgdaUnderscore{}∘\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \end{code}
