--- a/test/LaTeXAndHTML/succeed/Issue2474.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2474.quick.tex
@@ -15,7 +15,7 @@
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaPostulate{F}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{\_}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
