[ #3024 ] Status quo of projection pattern in agda --latex.
Postfix projections are not highlighted correctly

--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
@@ -281,4 +281,120 @@
 \>[4]\AgdaSymbol{\}}\<%
 \end{code}
 
+Andreas, 2018-04-03: The following two modules test the highlighting of projection patterns.
+
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{QualifiedProjectionPatterns}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaFunction{r}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{R}\<%
+\\
+%
+\>[2]\AgdaFunction{r}\AgdaSpace{}%
+\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{R.f}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
+\\
+%
+\>[2]\AgdaFunction{r}\AgdaSpace{}%
+\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{R.g}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{⊥}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{R′}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSpace{}%
+\AgdaDatatype{⊥}\<%
+\\
+%
+\>[2]\AgdaField{R′.h}\AgdaSpace{}%
+\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{⊥}\<%
+\\
+%
+\>[2]\AgdaField{R′.j}\AgdaSpace{}%
+\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
+\\
+%
+\>[2]\AgdaField{R′.r}\AgdaSpace{}%
+\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{r}\<%
+\end{code}
+
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{UnqualifiedProjectionPatterns}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{R}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{R′}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{r₀}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{R}\<%
+\\
+%
+\>[2]\AgdaFunction{r₀}\AgdaSpace{}%
+\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{f}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
+\\
+%
+\>[2]\AgdaFunction{r₀}\AgdaSpace{}%
+\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{g}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{⊥}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{R′}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSpace{}%
+\AgdaDatatype{⊥}\<%
+\\
+%
+\>[2]\AgdaField{h}\AgdaSpace{}%
+\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{⊥}\<%
+\\
+%
+\>[2]\AgdaField{j}\AgdaSpace{}%
+\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaDatatype{Bool}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Bool}\<%
+\\
+%
+\>[2]\AgdaField{r}\AgdaSpace{}%
+\AgdaFunction{r′}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{r₀}\<%
+\end{code}
+
 \end{document}
