Fixed #3024: don't give postfix projection patterns the aspect DottedPattern

--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
@@ -297,13 +297,13 @@ Andreas, 2018-04-03: The following two modules test the highlighting of projecti
 \\
 %
 \>[2]\AgdaFunction{r}\AgdaSpace{}%
-\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{R.f}}\AgdaSpace{}%
+\AgdaSymbol{.}\AgdaField{R.f}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{Bool}\<%
 \\
 %
 \>[2]\AgdaFunction{r}\AgdaSpace{}%
-\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{R.g}}\AgdaSpace{}%
+\AgdaSymbol{.}\AgdaField{R.g}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
@@ -357,13 +357,13 @@ Andreas, 2018-04-03: The following two modules test the highlighting of projecti
 \\
 %
 \>[2]\AgdaFunction{r₀}\AgdaSpace{}%
-\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{f}}\AgdaSpace{}%
+\AgdaSymbol{.}\AgdaField{f}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{Bool}\<%
 \\
 %
 \>[2]\AgdaFunction{r₀}\AgdaSpace{}%
-\AgdaSymbol{\AgdaDottedPattern{.}}\AgdaField{\AgdaDottedPattern{g}}\AgdaSpace{}%
+\AgdaSymbol{.}\AgdaField{g}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
