[ HCAR ] May 2018 entry
[ci skip]

--- a/doc/HCAR/May-2018.tex
+++ b/doc/HCAR/May-2018.tex
@@ -1,7 +1,7 @@
 % Agda-UA.tex
 \begin{hcarentry}[updated]{Agda}
 \label{agda}
-\report{Ulf Norell}%11/17
+\report{Ulf Norell}%05/18
 \status{actively developed}
 \participants{Ulf Norell, Nils Anders Danielsson, Andreas Abel,
 Jesper Cockx, Makoto Takeyama,
@@ -25,15 +25,16 @@ programming language (good libraries, mature compilers, documentation,
 etc.), but already in its current state it can provide lots of value as a
 platform for research and experiments in dependently typed programming.
 
-Some highlights from the past six months:
+Release of Agda~2.5.4 is planned for early summer 2018 with a number of
+new features:
 \begin{compactitem}
-\item Agda~2.5.3 was released in September 2017.
-\item The Agda documentation at
-\url{http://agda.readthedocs.org/en/stable/} is being continuously improved.
-\item Experimental support for homotopy type theory has been added to the
-developement branch by Andrea Vezzosi.
+\item {\tt do}-notation
+\item Compile-time call-by-need evaluation
+\item Builtin 64-bit words
+\item Improved performance of compiled code
 \end{compactitem}
 
 \FurtherReading
   The Agda Wiki: \url{http://wiki.portal.chalmers.se/agda/}
+  Language Documentation: \url{http://agda.readthedocs.org/en/stable/}
 \end{hcarentry}
