[ #3120 ] Forgot html and latex tests

--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
@@ -245,33 +245,23 @@
 \AgdaKeyword{record}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{h}%
-\>[9]\AgdaSymbol{=}\AgdaSpace{}%
+\>[4]\AgdaSymbol{\{} h  \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
-\>[4]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{j}%
-\>[9]\AgdaSymbol{=}\AgdaSpace{}%
+\>[4]\AgdaSymbol{;} j  \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
-\>[4]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{r}%
-\>[110I]\AgdaSymbol{=}\AgdaSpace{}%
+\>[4]\AgdaSymbol{;} r \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{record}\<%
 \\
-\>[.]\<[110I]%
-\>[8]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{f}%
-\>[13]\AgdaSymbol{=}\AgdaSpace{}%
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[8]\AgdaSymbol{\{} f  \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
-\>[8]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{g}%
-\>[13]\AgdaSymbol{=}\AgdaSpace{}%
+\>[8]\AgdaSymbol{;} g  \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
