[ #2474 ] Tweaked the order in which commands are generated.

--- a/test/LaTeXAndHTML/succeed/Issue2474.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2474.tex
@@ -29,6 +29,6 @@
 \\
 \>[0]\AgdaFunction{A}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaPostulate{\AgdaUnsolvedMeta{F}}\<%
+\AgdaUnsolvedMeta{\AgdaPostulate{F}}\<%
 \end{code}
 \end{document}
