--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.tex
@@ -153,11 +153,11 @@
 \>[32]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaNumber{6}\<%
 \\
-\>[0]\AgdaFunction{\AgdaCatchallClause{alignment}}%
-\>[20]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
-\>[23]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
-\>[26]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
-\>[29]\AgdaSymbol{\AgdaCatchallClause{\AgdaUnderscore{}}}%
+\>[0]\AgdaCatchallClause{\AgdaFunction{alignment}}%
+\>[20]\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}%
+\>[23]\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}%
+\>[26]\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}%
+\>[29]\AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}%
 \>[32]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaNumber{0}\<%
 \end{code}
