[ fixed #3322 ] For quicklatex, we need highlighting of record fields from scope checker
This should revert a regression introduced in #3120.

--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
@@ -245,23 +245,33 @@
 \AgdaKeyword{record}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{\{} h  \AgdaSymbol{=}\AgdaSpace{}%
+\>[4]\AgdaSymbol{\{}\AgdaSpace{}%
+\AgdaField{h}%
+\>[9]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
-\>[4]\AgdaSymbol{;} j  \AgdaSymbol{=}\AgdaSpace{}%
+\>[4]\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaField{j}%
+\>[9]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
-\>[4]\AgdaSymbol{;} r \AgdaSymbol{=}\AgdaSpace{}%
+\>[4]\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaField{r}%
+\>[110I]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{record}\<%
 \\
-\>[4][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaSymbol{\{} f  \AgdaSymbol{=}\AgdaSpace{}%
+\>[.]\<[110I]%
+\>[8]\AgdaSymbol{\{}\AgdaSpace{}%
+\AgdaField{f}%
+\>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
-\>[8]\AgdaSymbol{;} g  \AgdaSymbol{=}\AgdaSpace{}%
+\>[8]\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaField{g}%
+\>[13]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{⊥}\<%
 \\
 %
