[ fix ] < and > need to be in math mode in latex
Otherwise we get a garbled output.

--- a/test/LaTeXAndHTML/succeed/Indenting2.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting2.tex
@@ -20,7 +20,7 @@
 \>[2]\AgdaInductiveConstructor{suc}%
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Nat}\AgdaSpace{}%
-\AgdaSymbol{{-}>}\AgdaSpace{}%
+\AgdaSymbol{{-}\ensuremath{>}}\AgdaSpace{}%
 \AgdaDatatype{Nat}\<%
 \end{code}
 
