--- a/test/LaTeXAndHTML/succeed/Issue1062.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1062.tex
@@ -20,7 +20,7 @@
 \>[27]\AgdaSymbol{\#{-}\}}\<%
 \\
 \>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
-\AgdaKeyword{BUILTIN} SIZELT  \AgdaOperator{\AgdaPostulate{Size<\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaKeyword{BUILTIN} SIZELT  \AgdaOperator{\AgdaPostulate{Size\ensuremath{<}\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\#{-}\}}\<%
 \\
 \>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
@@ -58,7 +58,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{List}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{{-}>}\AgdaSpace{}%
+\AgdaSymbol{{-}\ensuremath{>}}\AgdaSpace{}%
 \AgdaDatatype{List}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
@@ -131,7 +131,7 @@
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{j}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaOperator{\AgdaPostulate{Size<}}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{Size\ensuremath{<}}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaRecord{Stream}\AgdaSpace{}%
@@ -309,7 +309,7 @@
 \AgdaSymbol{(∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{j}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaOperator{\AgdaPostulate{Size<}}\AgdaSpace{}%
+\AgdaOperator{\AgdaPostulate{Size\ensuremath{<}}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{S}\AgdaSpace{}%
