--- a/test/LaTeXAndHTML/succeed/Indenting.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting.quick.tex
@@ -20,7 +20,7 @@
 \>[2]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Nat}\AgdaSpace{}%
-\AgdaSymbol{{-}>}\AgdaSpace{}%
+\AgdaSymbol{{-}\ensuremath{>}}\AgdaSpace{}%
 \AgdaDatatype{Nat}\<%
 \end{code}
 
